Updated teammember section

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ people:
 - name: Faiku Fitim
   pic: default_profile
   position: Fahrgastkomfort
-  social: Zust&auml;ndig f&uuml; die Darstellung der Sensordaten zur ermittlung des Fahrgastkomforts.
+  social: Zust&auml;ndig f&uuml;r die Darstellung der Sensordaten zur ermittlung des Fahrgastkomforts.
     - title: github
       url: #
     - title: facebook
