Redesign of landing page, fixed team page problems

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ people:
 - name: Bozkurt H&uuml;seyin
   pic: bozzy
   position: Developer
-  text: 
+  text: Kowloon corrupted pistol concrete market convenience store tube sign papier-mache face forwards tiger-team industrial grade math-construct wristwatch realism neon. Euro-pop dead into A.I. render-farm vinyl car kanji shanty town Chiba.
   social:
     - title: github
       url: https://github.com/hbozkurt-tgm
@@ -31,7 +31,7 @@ people:
 - name: Faiku Fitim
   pic: fitim
   position: Developer
-  text: 
+  text: Kowloon corrupted pistol concrete market convenience store tube sign papier-mache face forwards tiger-team industrial grade math-construct wristwatch realism neon. Euro-pop dead into A.I. render-farm vinyl car kanji shanty town Chiba.
   social:
     - title: github
       url: #
@@ -45,7 +45,7 @@ people:
 - name: Melichar Daniel
   pic: daniel
   position: Product Owner & Developer
-  text: Lorem ipsum
+  text: Kowloon corrupted pistol concrete market convenience store tube sign papier-mache face forwards tiger-team industrial grade math-construct wristwatch realism neon. Euro-pop dead into A.I. render-farm vinyl car kanji shanty town Chiba.
   social:
     - title: github
       url: https://www.github.com/dmelichar-tgm
@@ -74,6 +74,7 @@ people:
   pic: raphael
   position: Developer
   text: Lorem ipsum
+  text: Kowloon corrupted pistol concrete market convenience store tube sign papier-mache face forwards tiger-team industrial grade math-construct wristwatch realism neon. Euro-pop dead into A.I. render-farm vinyl car kanji shanty town Chiba.
   social:
     - title: github
       url: https://github.com/rsimsek-tgm
@@ -87,7 +88,7 @@ people:
 - name: List Erhard, BSc.
   pic: erhard-bang
   position: Stakeholder & Project Owner
-  text: Lorem ipsum
+  text: Kowloon corrupted pistol concrete market convenience store tube sign papier-mache face forwards tiger-team industrial grade math-construct wristwatch realism neon. Euro-pop dead into A.I. render-farm vinyl car kanji shanty town Chiba.
   social:
     - title: envelope
       url: mailto:elist@tgm.ac.at
