Resized the blog post images

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: /BestShift/
 
 # Site settings
 title: BestShift
-email: daniel@melichar.me
+email: team@bestshift.at
 description: "Diplomaprojekt BestShift of the deparment for Information technology at the TGM in Vienna"
 
 # Color settings (hex-codes without the leading hash-tag)
