--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ people:
   text: Fitim Faiku ist für die Analyse der Fahrgastbequemlichkeit zuständig. Dieses Feature wird mithilfe eines Kamm’schen Kreises umgesetzt, welcher in der App abgerufen werden kann. Dieser zeigt Quer- und Längsbeschleunigung an. Der Kreis soll je nach Modus die g-Kraft innerhalb von unterschiedlichen Bereichen darstellen.
   social:
     - title: github
-      url: #
+      url: https://github.com/ffaiku-tgm
     - title: facebook
       url: https://www.facebook.com/fitim.Ka
     - title: xing
@@ -45,10 +45,8 @@ people:
 - name: Melichar Daniel
   pic: daniel
   position: Product Owner & Developer
-
   text: Daniel Melichar ist der perfekte Vertreter des Produktes für den Kunden, und bei Beendigung des Projektes werden mögliche Interessenten die über diverse Networks auf das Produkt aufmerksam geworden sind und es gerne kaufen würden mit ihm Kontakt aufnehmen. Herr Melichar ist höchst engagiert für das Projekt und besitzt die Fähigkeiten dieses Engagement in die Tat umzu setzten. Herr Melichar ist im Projekt vor allem für die Bereitstellung und Interpretierung der Motor- und Sensordaten zuständig. 
   social: 
-
     - title: github
       url: https://www.github.com/dmelichar-tgm
     - title: facebook
@@ -64,21 +62,18 @@ people:
   text: Tobias Perny hat als einziger Systemtechniker der Projektgruppe die hardwarenäheste Aufgabe des ganzen Projektes. Er soll einen CarPC mit allen nötigen Sensoren, aber allen voran einem GPS-Sensor, Beschleunigungssensor und Gyroskop verwirklichen. Dafür muss der CarPC an das 12V Bordnetz eines PKW angebunden werden, außerdem sollen dessen Daten ausgelesen werden.   
   social:
     - title: github
-      url: #
+      url: https://github.com/tperny-tgm
     - title: facebook
-      url: #
+      url: https://www.facebook.com/#/tobias.perny.1
     - title: xing
-      url: #
+      url: https://www.xing.com/profile/Tobias_Perny?sc_o=mxb_p
     - title: envelope
       url: mailto:tperny@student.tgm.ac.at
 
 - name: Simsek Raphael
   pic: raphael
   position: Developer
-  text: Lorem ipsum
-
   text: Raphael Simsek hatte gemeinsam mit Herrn Prof. List die Idee für das Projekt entwicklet. Das Teilprojekt von Herrn Simsek umfasst die Berechnung von Schaltvorschlägen mittels Algorithmen für maximales Drehmoment und für kraftstoffsparendes Fahren. Das Wissen über die Algorithmen für diese Berechnungen wird erst erlangt. Das Teilprojekt wird allerdings definitiv für Android programmiert sein und die Drehzahl ebenfalls mittels der Motordaten darstellen. 
-
   social:
     - title: github
       url: https://github.com/rsimsek-tgm
@@ -92,12 +87,12 @@ people:
 - name: List Erhard, BSc.
   pic: erhard-bang
   position: Stakeholder & Project Owner
-
   text: Prof. Erhard List ist als SCRUM-Master und Stakeholder im Team tätig. Dank seiner jahrelange Erfahrung im Bereichen wie Informationstechnologie, Robotik und Maschienenbau, kann er dem Team auch hierbei in jeglicher Hinsicht Hilfe leisten. Er ist auch ein großer Faktor für den Zusammenhalt, und  die Gemeinschaft des Teams.
-
   social:
     - title: envelope
       url: mailto:elist@tgm.ac.at
+    - title: xing
+      url: https://www.xing.com/profile/Erhard_List
 
 
 
